feat: 위치 업데이트 API 구현 및 매칭 로직에 위치 계산 적용